--- a/src/pages/LotoFacil/LotoFacil.css
+++ b/src/pages/LotoFacil/LotoFacil.css
@@ -24,6 +24,66 @@ input[type="file"] {
   width: 100%;
 }
 
+.frequencia-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.btn-usar-padrao {
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 15px;
+  font-size: 14px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px; /* Espaço entre o texto e o ícone */
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.btn-usar-padrao:hover {
+  background-color: #0056b3;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.btn-usar-padrao:focus {
+  outline: 3px solid #0056b3;
+}
+
+.btn-usar-padrao-icon {
+  font-size: 16px;
+}
+
+.bola-numero {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: #4caf50;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  margin: 5px;
+}
+
+.jogo-bolinhas {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+
+
 .botoes-container {
   display: flex;
   justify-content: center;
