--- a/src/pages/HistoricoJogoLotoFacil/HistoricoJogoLotoFacil.css
+++ b/src/pages/HistoricoJogoLotoFacil/HistoricoJogoLotoFacil.css
@@ -91,7 +91,7 @@
   align-items: center; /* Alinha verticalmente o número dentro do círculo */
   width: 30px;
   height: 30px;
-  background-color: #007bff;
+  background-color: #06b122;
   color: white;
   border-radius: 50%;
   font-size: 14px;
