--- a/src/pages/SuperSeteHome/SuperSeteHome.css
+++ b/src/pages/SuperSeteHome/SuperSeteHome.css
@@ -13,7 +13,7 @@
   }
   
   .btn-primary-supersete {
-    background-color: #7eb664;
+    background-color: #00C89D;
     border: none;
     font-size: 1rem;
     font-weight: bold;
@@ -25,7 +25,20 @@
   }
   
   .btn-primary-supersete:hover {
-    background-color: #b7d4a9;
+    background-color: #51E5B2;
     transform: scale(1.05);
   }
-  
+
+      /* Container para a imagem do logo */
+  .logo-container {
+    margin-top: -80px;
+    margin-bottom: -65px;
+         }
+         
+         /* Estilo da imagem do logo */
+  .supersete-logo {
+    width: 200px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
+   }
