--- a/src/pages/DuplaSenaHome/DuplaSenaHome.css
+++ b/src/pages/DuplaSenaHome/DuplaSenaHome.css
@@ -13,7 +13,7 @@
   }
   
   .btn-primary-duplasena {
-    background-color: #df1a4b;
+    background-color: #9E0122;
     border: none;
     font-size: 1rem;
     font-weight: bold;
@@ -25,7 +25,20 @@
   }
   
   .btn-primary-duplasena:hover {
-    background-color: #da748d;
+    background-color: #FC5646;
     transform: scale(1.05);
   }
-  
+
+    /* Container para a imagem do logo */
+    .logo-container {
+      margin-top: -80px;
+      margin-bottom: -65px;
+    }
+    
+    /* Estilo da imagem do logo */
+    .duplasena-logo {
+      width: 200px;
+      height: auto;
+      display: block;
+      margin: 0 auto;
+    }
