--- a/src/pages/GerarBalanceadosLotoFacil/GerarBalanceadosLotoFacil.css
+++ b/src/pages/GerarBalanceadosLotoFacil/GerarBalanceadosLotoFacil.css
@@ -17,10 +17,7 @@
     font-size: 16px;
     margin-bottom: 20px;
   }
-  
-  .generate-button:hover {
-    background: #0056b3;
-  }
+   */
   
   .generated-numbers {
     margin-top: 20px;
